# OpenTTD

./: _data - Snelkoppeling.lnk
_data/: plot_som.gn
_data/BASE/1v4/seed_100_a_1.000000_t_15.000000_w_5000_k_0.500000/: plot_data.gn
_data/KNN/4 players/seed_100_a_1.000000_t_15.000000_w_5000_k_0.500000/: plot_anomalies.gn
_data/SOM - kopie/: plot.gn
_data/SOM/seed_100_baseline/: plot_som.gn
_data/seed_100/: plot.gn
_data/seed_100 - baseline/: plot.gn
projects/: AnomalyDetector.cpp  AnomalyDetector.h  Vector2.h  generate_vs141.vcxproj  knn.h  langs_vs141.vcxproj  loci.h  lof.h  openttd_vs141.vcxproj  openttd_vs141.vcxproj.filters  settings_vs141.vcxproj  settingsgen_vs141.vcxproj  som.cpp  strgen_vs141.vcxproj  version_vs141.vcxproj
src/: company_base.h  company_cmd.cpp  company_gui.cpp  console_cmds.cpp  economy.cpp  group.h  group_cmd.cpp  main_gui.cpp  misc.cpp  openttd.cpp  rail_cmd.cpp  road_cmd.cpp  station_cmd.cpp  tunnelbridge_cmd.cpp
src/anomaly detection/: AnomalyDetector.cpp  AnomalyDetector.h  DataChart.cpp  DataChart.h  DataPoint.h  DetectionSettings.h  Detector.cpp  Detector.h  VariablePointer.cpp  VariablePointer.h  Vector2.h  knn.cpp  knn.h  loci.cpp  loci.h  lof.cpp  lof.h  som.cpp  som.h
src/core/: random_func.cpp  random_func.hpp
src/game/: game_core.cpp
