set autoscale
set offset graph 0.1, graph 0.1, graph 0.1, graph 0.1

list = system('dir /b som_*.dat')
i=0

do for [file in list] {
    filename = "som_".i.".dat"
    s = system("findstr /B \"#\" ".filename)

    set title "SOM Map ".i
    set term wxt i
    plot filename using 2:3 with lines pointtype 7 title "SOM Map"
    i=i+1
}

pause -1
#pause 1
#reread