set autoscale
set offset graph 0.1, graph 0.1, graph 0.1, graph 0.1

list = system('dir /b som_*.dat')
i=0

do for [file in list] {
    filename = "som_".i.".dat"
    s = system("findstr /B \"#\" ".filename)
    set xlabel word(s,2)
    set ylabel word(s,3)

    set title "Anomaly Detection ".i
    set term wxt i
    plot filename with lines title "SOM"
    i=i+1
}

pause -1
#pause 1
#reread