set autoscale
set offset graph 0.1, graph 0.1, graph 0.1, graph 0.1

list = system('dir /b data_*.dat')
i=0

do for [file in list] {
    filename = "data_".i.".dat"
    s = system("findstr /B \"#\" ".filename)
    set xlabel word(s,2)
    set ylabel word(s,3)

    set title "Anomaly Detection ".i
    set term wxt i
    plot filename with points pointtype 7 title "Data"
    i=i+1
}

pause -1
#pause 1
#reread